<dev> 添加配置文件

--- a/src/main/resources/streamx/date.conf
+++ b/src/main/resources/streamx/date.conf
@@ -12,7 +12,7 @@ source {
         # json
         data.type = "json"
         topics = "shaojiao_1000w"
-        consumer.bootstrap.servers = "kafka01:9092,kafka02:9092,kafka03:9092"
+        consumer.bootstrap.servers = "kafka01:9092"
         consumer.group.id = "log100w_1"
         # latest/earliest/none
         offset.reset="earliest"
@@ -30,7 +30,7 @@ transform {
         datatype = 1
         typename = ""
         is_check = false
-        parallelism = 2
+        parallelism = 1
     }
 }
 
