<dev> 添加配置文件

--- a/src/main/resources/streamx/metric2influx.conf
+++ b/src/main/resources/streamx/metric2influx.conf
@@ -1,6 +1,6 @@
 job.env{
     job.name = "metricstore"
-    execution.parallelism = 2
+    execution.parallelism = 1
 }
 
 ddl {
@@ -13,10 +13,10 @@ source {
         topics = "metric_avro_1000w"
         consumer.bootstrap.servers = "kafka03:9092"
         consumer.group.id = "metricstore"
-        offset.reset="earliest"
+        offset.reset="none"
         kafka.security.model="none"
         result_table_name = "ZorkDataKafkaStreamSource"
-        parallelism = 4
+        parallelism = 1
     }
 }
 
