--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,22 +1,26 @@
 on:
   push:
     # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    branches:
+      - master
 
 name: Create Release
 
 jobs:
-  build:
-    name: Create Release
-    runs-on: ubuntu-latest
+  release:
+    runs-on: ubuntu-18.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Set up Maven
-        uses: aahmed-se/setup-maven@v3
+
+      - name: Install Java and Maven
+        uses: actions/setup-java@v1
         with:
-          maven-version: 3.6.1
-          git-release-bot-name: "xiesen310"
-          git-release-bot-email: "xiesen310@163.com"
-          maven-args: "-Dmaven.javadoc.skip=true -DskipTests -DskipITs -Ddockerfile.skip -DdockerCompose.skip"
+          java-version: 8
+      - name: Release Maven package
+          uses: samuelmeuli/action-maven-publish@v1
+          with:
+            gpg_private_key: ${{ secrets.gpg_private_key }}
+            gpg_passphrase: ${{ secrets.gpg_passphrase }}
+            nexus_username: ${{ secrets.nexus_username }}
+            nexus_password: ${{ secrets.nexus_password }}
