--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -17,10 +17,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 8
+
       - name: Release Maven package
           uses: samuelmeuli/action-maven-publish@v1
-          with:
-            gpg_private_key: ${{ secrets.gpg_private_key }}
-            gpg_passphrase: ${{ secrets.gpg_passphrase }}
-            nexus_username: ${{ secrets.nexus_username }}
-            nexus_password: ${{ secrets.nexus_password }}
+      - name: mvn info
+          run: mvn --version
+      - name: build
+          run: mvn clean package -Dmaven.test.skip=true
+
