--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -7,22 +7,15 @@ on:
 name: Create Release
 
 jobs:
-  release:
+  build:
+
     runs-on: ubuntu-18.04
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install Java and Maven
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
-          java-version: 8
-
-      - name: Set up Maven
-        uses: aahmed-se/setup-maven@v3
-        with:
-          maven-version: 3.6.1
-
-      - name: build
-          run: mvn clean package -Dmaven.test.skip=true
-
+          java-version: 1.8
+      - name: Build with Maven
+        run:
+          mvn clean package -DskipTests=true -Dmaven.javadoc.skip=true -B -V
